[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictknife"
dynamic = ["version"]
description = "utility set of handling dict"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["dict", "dict-handling"]
authors = [
  { name = "podhmo", email = "ababjam61@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/podhmo/dictknife"
Documentation = "http://dictknife.readthedocs.io"
Repository = "https://github.com/podhmo/dictknife"

[project.scripts]
dictknife = "dictknife.commands.dictknife:main"
jsonknife = "dictknife.commands.jsonknife:main"
swaggerknife = "dictknife.commands.swaggerknife:main"

[project.optional-dependencies]
lint = ["flake8", "black", "mypy"]
docs = ["sphinx", "recommonmark", "sphinx_rtd_theme"]
load = ["ruamel.yaml", "tomlkit"]
command = ["ruamel.yaml", "magicalimport", "prestring"]
spreadsheet = ["google-api-python-client", "google-auth-oauthlib"]

[tool.hatch.version]
path = "src/dictknife/__version__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/dictknife"]

[tool.hatch.envs.default]
description = "Default environment for everyday tasks"
dependencies = [
  "dictknife[lint]",
  "dictknife[load]",
  "dictknife[command]",
#  "dictknife[docs]",
#  "dictknife[spreadsheet]",
]
[tool.hatch.envs.default.scripts]
lint = "flake8 --show-source --ignore=E501,E121,W503 src/dictknife"
type-check = "mypy --ignore-missing-imports --check-untyped-defs --no-strict-optional src/dictknife"
format = "black src/dictknife"
check = [
  "lint",
  "format --check --diff",
]
all = [
  "check",
  "test",
]

[tool.hatch.envs.hatch-test]
dependencies = [
  "ruamel.yaml",
  "jsonpatch",
  "pytest",
]
default-args = ["src/dictknife/tests"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# e2e
[tool.hatch.envs.e2e]

[[tool.hatch.envs.e2e.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

# TODO: remove
[tool.hatch.envs.docs]
description = "Environment for building documentation"
dependencies = [
  "dictknife[docs]",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs/ docs/_build/html"